[gd_scene load_steps=23 format=3 uid="uid://7nemy80yhqt8"]

[ext_resource type="Script" path="res://scripts/arena.gd" id="1_6f70y"]
[ext_resource type="Shader" path="res://shaders/terrain.gdshader" id="2_bqsn7"]
[ext_resource type="PackedScene" uid="uid://c4yumdc3ig2i6" path="res://scenes/item_spawner/item_spawner.tscn" id="3_j2egy"]
[ext_resource type="Script" path="res://scripts/terrain.gd" id="3_un0gm"]
[ext_resource type="PackedScene" uid="uid://53aspcqwurhf" path="res://scenes/death_plane.tscn" id="4_kg3b4"]
[ext_resource type="AudioStream" uid="uid://d3hjl272o23a8" path="res://assets/music/1stsectionubergang.mp3" id="5_33chl"]
[ext_resource type="PackedScene" uid="uid://de3qda5bsv0xr" path="res://scenes/items/rocket_launcher.tscn" id="5_ycclx"]
[ext_resource type="PackedScene" uid="uid://cx85uvy6y4qwm" path="res://scenes/items/grenade_launcher.tscn" id="6_evic2"]
[ext_resource type="AudioStream" uid="uid://cpcmpw52ru4d" path="res://assets/music/2ndsection.mp3" id="6_iq1qx"]
[ext_resource type="AudioStream" uid="uid://dwup5payo57jr" path="res://assets/music/2ndsectionubergang.mp3" id="7_rl8a6"]
[ext_resource type="AudioStream" uid="uid://x4nk0thjapp1" path="res://assets/music/3rdsection.mp3" id="8_spgpk"]
[ext_resource type="PackedScene" uid="uid://c1rksi0f440ri" path="res://scenes/performence_vulkan.tscn" id="9_2n3i8"]

[sub_resource type="VoxelGeneratorGraph" id="VoxelGeneratorGraph_babyf"]
graph_data = {
"connections": [[8, 0, 15, 1], [7, 0, 8, 0], [3, 0, 7, 1], [15, 0, 4, 0], [13, 0, 15, 0], [12, 0, 13, 0], [10, 0, 7, 2], [10, 0, 7, 3], [14, 0, 12, 0], [1, 0, 7, 0]],
"nodes": {
"1": {
"gui_position": Vector2(330, 160),
"type": "InputX"
},
"10": {
"gui_position": Vector2(270, 280),
"type": "Constant",
"value": 0.0
},
"12": {
"gui_position": Vector2(420, 60),
"type": "Abs"
},
"13": {
"b": 20.0,
"gui_position": Vector2(570, 80),
"type": "Subtract"
},
"14": {
"gui_position": Vector2(320, 60),
"type": "InputY"
},
"15": {
"gui_position": Vector2(710, 110),
"type": "Max"
},
"3": {
"gui_position": Vector2(330, 220),
"type": "InputZ"
},
"4": {
"auto_connect": true,
"gui_position": Vector2(850, 160),
"type": "OutputSDF"
},
"7": {
"auto_connect": true,
"gui_position": Vector2(430, 170),
"type": "Distance2D"
},
"8": {
"b": 100.0,
"gui_position": Vector2(580, 170),
"type": "Subtract"
}
},
"version": 2
}

[sub_resource type="VoxelMesherTransvoxel" id="VoxelMesherTransvoxel_r0c7e"]
mesh_optimization_enabled = true

[sub_resource type="Gradient" id="Gradient_tg2aw"]
interpolation_mode = 2
offsets = PackedFloat32Array(0.0681431, 0.277683, 0.507666, 0.71891, 1)
colors = PackedColorArray(0.635102, 0.0425496, 0.104968, 1, 0.598153, 0.333769, 0.897796, 1, 0.135917, 0.416313, 0.595319, 1, 0.119364, 0.492286, 0.443564, 1, 0.120797, 0.568037, 0.149154, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_4xjgf"]
gradient = SubResource("Gradient_tg2aw")
height = 1

[sub_resource type="ShaderMaterial" id="ShaderMaterial_c18we"]
render_priority = 0
shader = ExtResource("2_bqsn7")
shader_parameter/u_transition_mask = null
shader_parameter/u_block_local_transform = null
shader_parameter/color_ramp = SubResource("GradientTexture2D_4xjgf")

[sub_resource type="FastNoiseLite" id="FastNoiseLite_syr21"]
noise_type = 2

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_hluem"]
noise = SubResource("FastNoiseLite_syr21")

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_berjx"]
sky_top_color = Color(0.92145, 0.54879, 0.423175, 1)
sky_horizon_color = Color(1, 0.67451, 0, 1)
sky_cover = SubResource("NoiseTexture2D_hluem")
sky_cover_modulate = Color(0.898039, 0.615686, 0.823529, 0.760784)
ground_bottom_color = Color(0.165402, 0.182948, 0.133593, 1)
ground_horizon_color = Color(0.905544, 0.564814, 0.187756, 1)

[sub_resource type="Sky" id="Sky_fqwg8"]
sky_material = SubResource("ProceduralSkyMaterial_berjx")

[sub_resource type="Environment" id="Environment_1fodr"]
background_mode = 2
sky = SubResource("Sky_fqwg8")

[node name="Arena" type="Node3D"]
script = ExtResource("1_6f70y")

[node name="Items" type="Node3D" parent="."]

[node name="ItemSpawner1" parent="Items" node_paths=PackedStringArray("projectile_root") instance=ExtResource("3_j2egy")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 10, 5, 0)
projectile_root = NodePath("../../ProjectileRoot")
items = Array[PackedScene]([ExtResource("5_ycclx"), ExtResource("6_evic2")])

[node name="ItemSpawner2" parent="Items" node_paths=PackedStringArray("projectile_root") instance=ExtResource("3_j2egy")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 5, 10)
projectile_root = NodePath("../../ProjectileRoot")
items = Array[PackedScene]([ExtResource("5_ycclx"), ExtResource("6_evic2")])

[node name="ItemSpawner3" parent="Items" node_paths=PackedStringArray("projectile_root") instance=ExtResource("3_j2egy")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -10, 5, 0)
projectile_root = NodePath("../../ProjectileRoot")
items = Array[PackedScene]([ExtResource("5_ycclx"), ExtResource("6_evic2")])

[node name="ItemSpawner4" parent="Items" node_paths=PackedStringArray("projectile_root") instance=ExtResource("3_j2egy")]
transform = Transform3D(1.19249e-08, 0, -1, 0, 1, 0, 1, 0, 1.19249e-08, 0, 5, -10)
projectile_root = NodePath("../../ProjectileRoot")
items = Array[PackedScene]([ExtResource("5_ycclx"), ExtResource("6_evic2")])

[node name="ItemSpawner5" parent="Items" node_paths=PackedStringArray("projectile_root") instance=ExtResource("3_j2egy")]
transform = Transform3D(-0.707107, 0, 0.707107, 0, 1, 0, -0.707107, 0, -0.707107, 7, 5, 7)
projectile_root = NodePath("../../ProjectileRoot")
items = Array[PackedScene]([ExtResource("5_ycclx"), ExtResource("6_evic2")])

[node name="ItemSpawner6" parent="Items" node_paths=PackedStringArray("projectile_root") instance=ExtResource("3_j2egy")]
transform = Transform3D(0.707107, 0, 0.707107, 0, 1, 0, -0.707107, 0, 0.707107, -7, 5, 7)
projectile_root = NodePath("../../ProjectileRoot")
items = Array[PackedScene]([ExtResource("5_ycclx"), ExtResource("6_evic2")])

[node name="ItemSpawner7" parent="Items" node_paths=PackedStringArray("projectile_root") instance=ExtResource("3_j2egy")]
transform = Transform3D(0.707107, 0, -0.707107, 0, 1, 0, 0.707107, 0, 0.707107, -7, 5, -7)
projectile_root = NodePath("../../ProjectileRoot")
items = Array[PackedScene]([ExtResource("5_ycclx"), ExtResource("6_evic2")])

[node name="ItemSpawner8" parent="Items" node_paths=PackedStringArray("projectile_root") instance=ExtResource("3_j2egy")]
transform = Transform3D(-0.707107, 0, -0.707107, 0, 1, 0, 0.707107, 0, -0.707107, 7, 5, -7)
projectile_root = NodePath("../../ProjectileRoot")
items = Array[PackedScene]([ExtResource("5_ycclx"), ExtResource("6_evic2")])

[node name="ItemSpawner9" parent="Items" node_paths=PackedStringArray("projectile_root") instance=ExtResource("3_j2egy")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5, 0)
projectile_root = NodePath("../../ProjectileRoot")
items = Array[PackedScene]([ExtResource("5_ycclx"), ExtResource("6_evic2")])

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.346046, 0.930479, -0.120253, -0.430004, 0.271209, 0.861129, 0.833876, -0.246281, 0.493961, 0, 14.4751, 11.7942)

[node name="VoxelLodTerrain" type="VoxelLodTerrain" parent="." groups=["ground"]]
transform = Transform3D(0.2, -1.42058e-05, 8.32889e-05, 1.41632e-05, 0.2, 0.000102256, -8.32962e-05, -0.000102251, 0.2, 0, -4, 0)
generator = SubResource("VoxelGeneratorGraph_babyf")
mesher = SubResource("VoxelMesherTransvoxel_r0c7e")
voxel_bounds = AABB(-512, -256, -512, 1024, 512, 1024)
lod_distance = 128.0
material = SubResource("ShaderMaterial_c18we")
mesh_block_size = 32
full_load_mode_enabled = true
threaded_update_enabled = true
script = ExtResource("3_un0gm")

[node name="VoxelViewer" type="VoxelViewer" parent="VoxelLodTerrain"]
view_distance = 512

[node name="ProjectileRoot" type="Marker3D" parent="."]

[node name="CameraOrigin" type="Marker3D" parent="."]

[node name="Camera3D" type="Camera3D" parent="CameraOrigin"]
transform = Transform3D(1, 0, 0, 0, 0.675397, 0.737454, 0, -0.737454, 0.675397, 0, 10.4322, 22.3661)
current = true

[node name="DeathPlane" parent="." instance=ExtResource("4_kg3b4")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -8.04923, 0)

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_1fodr")

[node name="AudioStreamPlayer3D_1" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("5_33chl")

[node name="AudioStreamPlayer3D_2" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("6_iq1qx")

[node name="soundtimer" type="Timer" parent="AudioStreamPlayer3D_2"]
wait_time = 180.0

[node name="AudioStreamPlayer3D_3" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("7_rl8a6")

[node name="AudioStreamPlayer3D_4" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("8_spgpk")

[node name="performence_vulkan2" parent="." instance=ExtResource("9_2n3i8")]
transform = Transform3D(100, 0, 0, 0, 100, 0, 0, 0, 100, -1071.95, -16.5553, 83.4474)

[connection signal="finished" from="AudioStreamPlayer3D_1" to="." method="_on_audio_stream_player_3d_1_finished"]
[connection signal="finished" from="AudioStreamPlayer3D_2" to="." method="_on_audio_stream_player_3d_2_finished"]
[connection signal="timeout" from="AudioStreamPlayer3D_2/soundtimer" to="." method="_on_soundtimer_timeout"]
[connection signal="timeout" from="AudioStreamPlayer3D_2/soundtimer" to="." method="_on_soundtimer_2_timeout"]
[connection signal="finished" from="AudioStreamPlayer3D_3" to="." method="_on_audio_stream_player_3d_3_finished"]
